--- a/Challenge 3/requirements.txt
+++ b/Challenge 3/requirements.txt
@@ -1,3 +1,10 @@
-pandas==2.0.3
-numpy==1.24.4
-scikit-learn==1.3.2
+pandas==1.5.3
+numpy==1.24.3
+scikit-learn==1.4.0
+matplotlib==3.7.4
+seaborn==0.12.2
+pmdarima==2.0.4
+joblib==1.2.0
+sklearn==1.4
+imblearn==0.12.0
+xgboost==2.0.3
